Fix cropped logo

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -64,6 +64,7 @@ header {
         img {
           display: block;
           width: 100%;
+          border-radius:0;
         }
       }
 
